.provarCaches/00Df2000001KKNJEA4/objects/IncapMessaging__OAuth__mdt.object
<CustomObject>
    <fields>
        <fullName>IncapMessaging__Callback__c</fullName>
        <label>Callback</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OAuth</label>
    <pluralLabel>OAuths</pluralLabel>
</CustomObject>